parser.output
Terminals unused in grammar

   MK_DOT
   ERROR


State 219 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: global_decl_list
    2        | /* empty */

    3 global_decl_list: global_decl_list global_decl
    4                 | global_decl

    5 global_decl: decl_list function_decl
    6            | function_decl

    7 function_decl: type ID MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
    8              | VOID ID MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
    9              | ID ID MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
   10              | type ID MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE
   11              | VOID ID MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE
   12              | ID ID MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE

   13 param_list: param_list MK_COMMA param
   14           | param

   15 param: type ID
   16      | ID ID
   17      | type ID dim_fn
   18      | ID ID dim_fn

   19 dim_fn: MK_LB expr_null MK_RB
   20       | dim_fn MK_LB expr MK_RB

   21 expr_null: expr
   22          | /* empty */

   23 block: decl_list stmt_list
   24      | stmt_list
   25      | decl_list
   26      | /* empty */

   27 decl_list: decl_list decl
   28          | decl

   29 decl: type_decl
   30     | var_decl

   31 type_decl: TYPEDEF type id_list MK_SEMICOLON
   32          | TYPEDEF VOID id_list MK_SEMICOLON

   33 var_decl: type init_id_list MK_SEMICOLON
   34         | ID id_list MK_SEMICOLON

   35 type: INT
   36     | FLOAT

   37 id_list: ID
   38        | id_list MK_COMMA ID
   39        | id_list MK_COMMA ID dim_decl
   40        | ID dim_decl

   41 dim_decl: MK_LB cexpr MK_RB
   42         | dim_decl MK_LB cexpr MK_RB

   43 cexpr: cexpr OP_PLUS mcexpr
   44      | cexpr OP_MINUS mcexpr
   45      | mcexpr

   46 mcexpr: mcexpr OP_TIMES cfactor
   47       | mcexpr OP_DIVIDE cfactor
   48       | cfactor

   49 cfactor: CONST
   50        | MK_LPAREN cexpr MK_RPAREN

   51 init_id_list: init_id
   52             | init_id_list MK_COMMA init_id

   53 init_id: ID
   54        | ID dim_decl
   55        | ID OP_ASSIGN relop_expr

   56 stmt_list: stmt_list stmt
   57          | stmt

   58 stmt: MK_LBRACE block MK_RBRACE
   59     | WHILE MK_LPAREN test MK_RPAREN stmt
   60     | FOR MK_LPAREN assign_expr_list MK_SEMICOLON relop_expr_list MK_SEMICOLON assign_expr_list MK_RPAREN stmt
   61     | var_ref OP_ASSIGN relop_expr MK_SEMICOLON
   62     | IF MK_LPAREN test MK_RPAREN stmt
   63     | IF MK_LPAREN test MK_RPAREN stmt ELSE stmt
   64     | ID MK_LPAREN relop_expr_list MK_RPAREN MK_SEMICOLON
   65     | MK_SEMICOLON
   66     | RETURN MK_SEMICOLON
   67     | RETURN relop_expr MK_SEMICOLON

   68 assign_expr_list: nonempty_assign_expr_list
   69                 | /* empty */

   70 nonempty_assign_expr_list: nonempty_assign_expr_list MK_COMMA assign_expr
   71                          | assign_expr

   72 test: assign_expr

   73 assign_expr: ID OP_ASSIGN relop_expr
   74            | relop_expr

   75 relop_expr: relop_term
   76           | relop_expr OP_OR relop_term

   77 relop_term: relop_factor
   78           | relop_term OP_AND relop_factor

   79 relop_factor: expr
   80             | expr rel_op expr

   81 rel_op: OP_EQ
   82       | OP_GE
   83       | OP_LE
   84       | OP_NE
   85       | OP_GT
   86       | OP_LT

   87 relop_expr_list: nonempty_relop_expr_list
   88                | /* empty */

   89 nonempty_relop_expr_list: nonempty_relop_expr_list MK_COMMA relop_expr
   90                         | relop_expr

   91 expr: expr add_op term
   92     | term

   93 add_op: OP_PLUS
   94       | OP_MINUS

   95 term: term mul_op factor
   96     | factor

   97 mul_op: OP_TIMES
   98       | OP_DIVIDE

   99 factor: MK_LPAREN relop_expr MK_RPAREN
  100       | OP_MINUS MK_LPAREN relop_expr MK_RPAREN
  101       | OP_NOT MK_LPAREN relop_expr MK_RPAREN
  102       | CONST
  103       | OP_MINUS CONST
  104       | OP_NOT CONST
  105       | ID MK_LPAREN relop_expr_list MK_RPAREN
  106       | OP_MINUS ID MK_LPAREN relop_expr_list MK_RPAREN
  107       | OP_NOT ID MK_LPAREN relop_expr_list MK_RPAREN
  108       | var_ref
  109       | OP_MINUS var_ref
  110       | OP_NOT var_ref

  111 var_ref: ID
  112        | ID dim_list

  113 dim_list: dim_list MK_LB expr MK_RB
  114         | MK_LB expr MK_RB


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 7 8 9 10 11 12 15 16 17 18 34 37 38 39 40 53 54 55 64 73 105
    106 107 111 112
CONST (259) 49 102 103 104
VOID (260) 8 11 32
INT (261) 35
FLOAT (262) 36
IF (263) 62 63
ELSE (264) 63
WHILE (265) 59
FOR (266) 60
TYPEDEF (267) 31 32
OP_ASSIGN (268) 55 61 73
OP_OR (269) 76
OP_AND (270) 78
OP_NOT (271) 101 104 107 110
OP_EQ (272) 81
OP_NE (273) 84
OP_GT (274) 85
OP_LT (275) 86
OP_GE (276) 82
OP_LE (277) 83
OP_PLUS (278) 43 93
OP_MINUS (279) 44 94 100 103 106 109
OP_TIMES (280) 46 97
OP_DIVIDE (281) 47 98
MK_LB (282) 19 20 41 42 113 114
MK_RB (283) 19 20 41 42 113 114
MK_LPAREN (284) 7 8 9 10 11 12 50 59 60 62 63 64 99 100 101 105 106
    107
MK_RPAREN (285) 7 8 9 10 11 12 50 59 60 62 63 64 99 100 101 105 106
    107
MK_LBRACE (286) 7 8 9 10 11 12 58
MK_RBRACE (287) 7 8 9 10 11 12 58
MK_COMMA (288) 13 38 39 52 70 89
MK_SEMICOLON (289) 31 32 33 34 60 61 64 65 66 67
MK_DOT (290)
ERROR (291)
RETURN (292) 66 67


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
program (39)
    on left: 1 2, on right: 0
global_decl_list (40)
    on left: 3 4, on right: 1 3
global_decl (41)
    on left: 5 6, on right: 3 4
function_decl (42)
    on left: 7 8 9 10 11 12, on right: 5 6
param_list (43)
    on left: 13 14, on right: 7 8 9 13
param (44)
    on left: 15 16 17 18, on right: 13 14
dim_fn (45)
    on left: 19 20, on right: 17 18 20
expr_null (46)
    on left: 21 22, on right: 19
block (47)
    on left: 23 24 25 26, on right: 7 8 9 10 11 12 58
decl_list (48)
    on left: 27 28, on right: 5 23 25 27
decl (49)
    on left: 29 30, on right: 27 28
type_decl (50)
    on left: 31 32, on right: 29
var_decl (51)
    on left: 33 34, on right: 30
type (52)
    on left: 35 36, on right: 7 10 15 17 31 33
id_list (53)
    on left: 37 38 39 40, on right: 31 32 34 38 39
dim_decl (54)
    on left: 41 42, on right: 39 40 42 54
cexpr (55)
    on left: 43 44 45, on right: 41 42 43 44 50
mcexpr (56)
    on left: 46 47 48, on right: 43 44 45 46 47
cfactor (57)
    on left: 49 50, on right: 46 47 48
init_id_list (58)
    on left: 51 52, on right: 33 52
init_id (59)
    on left: 53 54 55, on right: 51 52
stmt_list (60)
    on left: 56 57, on right: 23 24 56
stmt (61)
    on left: 58 59 60 61 62 63 64 65 66 67, on right: 56 57 59 60 62
    63
assign_expr_list (62)
    on left: 68 69, on right: 60
nonempty_assign_expr_list (63)
    on left: 70 71, on right: 68 70
test (64)
    on left: 72, on right: 59 62 63
assign_expr (65)
    on left: 73 74, on right: 70 71 72
relop_expr (66)
    on left: 75 76, on right: 55 61 67 73 74 76 89 90 99 100 101
relop_term (67)
    on left: 77 78, on right: 75 76 78
relop_factor (68)
    on left: 79 80, on right: 77 78
rel_op (69)
    on left: 81 82 83 84 85 86, on right: 80
relop_expr_list (70)
    on left: 87 88, on right: 60 64 105 106 107
nonempty_relop_expr_list (71)
    on left: 89 90, on right: 87 89
expr (72)
    on left: 91 92, on right: 20 21 79 80 91 113 114
add_op (73)
    on left: 93 94, on right: 91
term (74)
    on left: 95 96, on right: 91 92 95
mul_op (75)
    on left: 97 98, on right: 95
factor (76)
    on left: 99 100 101 102 103 104 105 106 107 108 109 110, on right:
    95 96
var_ref (77)
    on left: 111 112, on right: 61 108 109 110
dim_list (78)
    on left: 113 114, on right: 112 113


State 0

    0 $accept: . program $end

    ID       shift, and go to state 1
    VOID     shift, and go to state 2
    INT      shift, and go to state 3
    FLOAT    shift, and go to state 4
    TYPEDEF  shift, and go to state 5

    $default  reduce using rule 2 (program)

    program           go to state 6
    global_decl_list  go to state 7
    global_decl       go to state 8
    function_decl     go to state 9
    decl_list         go to state 10
    decl              go to state 11
    type_decl         go to state 12
    var_decl          go to state 13
    type              go to state 14


State 1

    9 function_decl: ID . ID MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
   12              | ID . ID MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE
   34 var_decl: ID . id_list MK_SEMICOLON

    ID  shift, and go to state 15

    id_list  go to state 16


State 2

    8 function_decl: VOID . ID MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
   11              | VOID . ID MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE

    ID  shift, and go to state 17


State 3

   35 type: INT .

    $default  reduce using rule 35 (type)


State 4

   36 type: FLOAT .

    $default  reduce using rule 36 (type)


State 5

   31 type_decl: TYPEDEF . type id_list MK_SEMICOLON
   32          | TYPEDEF . VOID id_list MK_SEMICOLON

    VOID   shift, and go to state 18
    INT    shift, and go to state 3
    FLOAT  shift, and go to state 4

    type  go to state 19


State 6

    0 $accept: program . $end

    $end  shift, and go to state 20


State 7

    1 program: global_decl_list .
    3 global_decl_list: global_decl_list . global_decl

    ID       shift, and go to state 1
    VOID     shift, and go to state 2
    INT      shift, and go to state 3
    FLOAT    shift, and go to state 4
    TYPEDEF  shift, and go to state 5

    $default  reduce using rule 1 (program)

    global_decl    go to state 21
    function_decl  go to state 9
    decl_list      go to state 10
    decl           go to state 11
    type_decl      go to state 12
    var_decl       go to state 13
    type           go to state 14


State 8

    4 global_decl_list: global_decl .

    $default  reduce using rule 4 (global_decl_list)


State 9

    6 global_decl: function_decl .

    $default  reduce using rule 6 (global_decl)


State 10

    5 global_decl: decl_list . function_decl
   27 decl_list: decl_list . decl

    ID       shift, and go to state 1
    VOID     shift, and go to state 2
    INT      shift, and go to state 3
    FLOAT    shift, and go to state 4
    TYPEDEF  shift, and go to state 5

    function_decl  go to state 22
    decl           go to state 23
    type_decl      go to state 12
    var_decl       go to state 13
    type           go to state 14


State 11

   28 decl_list: decl .

    $default  reduce using rule 28 (decl_list)


State 12

   29 decl: type_decl .

    $default  reduce using rule 29 (decl)


State 13

   30 decl: var_decl .

    $default  reduce using rule 30 (decl)


State 14

    7 function_decl: type . ID MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
   10              | type . ID MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE
   33 var_decl: type . init_id_list MK_SEMICOLON

    ID  shift, and go to state 24

    init_id_list  go to state 25
    init_id       go to state 26


State 15

    9 function_decl: ID ID . MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
   12              | ID ID . MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE
   37 id_list: ID .
   40        | ID . dim_decl

    MK_LB      shift, and go to state 27
    MK_LPAREN  shift, and go to state 28

    $default  reduce using rule 37 (id_list)

    dim_decl  go to state 29


State 16

   34 var_decl: ID id_list . MK_SEMICOLON
   38 id_list: id_list . MK_COMMA ID
   39        | id_list . MK_COMMA ID dim_decl

    MK_COMMA      shift, and go to state 30
    MK_SEMICOLON  shift, and go to state 31


State 17

    8 function_decl: VOID ID . MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
   11              | VOID ID . MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE

    MK_LPAREN  shift, and go to state 32


State 18

   32 type_decl: TYPEDEF VOID . id_list MK_SEMICOLON

    ID  shift, and go to state 33

    id_list  go to state 34


State 19

   31 type_decl: TYPEDEF type . id_list MK_SEMICOLON

    ID  shift, and go to state 33

    id_list  go to state 35


State 20

    0 $accept: program $end .

    $default  accept


State 21

    3 global_decl_list: global_decl_list global_decl .

    $default  reduce using rule 3 (global_decl_list)


State 22

    5 global_decl: decl_list function_decl .

    $default  reduce using rule 5 (global_decl)


State 23

   27 decl_list: decl_list decl .

    $default  reduce using rule 27 (decl_list)


State 24

    7 function_decl: type ID . MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
   10              | type ID . MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE
   53 init_id: ID .
   54        | ID . dim_decl
   55        | ID . OP_ASSIGN relop_expr

    OP_ASSIGN  shift, and go to state 36
    MK_LB      shift, and go to state 27
    MK_LPAREN  shift, and go to state 37

    $default  reduce using rule 53 (init_id)

    dim_decl  go to state 38


State 25

   33 var_decl: type init_id_list . MK_SEMICOLON
   52 init_id_list: init_id_list . MK_COMMA init_id

    MK_COMMA      shift, and go to state 39
    MK_SEMICOLON  shift, and go to state 40


State 26

   51 init_id_list: init_id .

    $default  reduce using rule 51 (init_id_list)


State 27

   41 dim_decl: MK_LB . cexpr MK_RB

    CONST      shift, and go to state 41
    MK_LPAREN  shift, and go to state 42

    cexpr    go to state 43
    mcexpr   go to state 44
    cfactor  go to state 45


State 28

    9 function_decl: ID ID MK_LPAREN . param_list MK_RPAREN MK_LBRACE block MK_RBRACE
   12              | ID ID MK_LPAREN . MK_RPAREN MK_LBRACE block MK_RBRACE

    ID         shift, and go to state 46
    INT        shift, and go to state 3
    FLOAT      shift, and go to state 4
    MK_RPAREN  shift, and go to state 47

    param_list  go to state 48
    param       go to state 49
    type        go to state 50


State 29

   40 id_list: ID dim_decl .
   42 dim_decl: dim_decl . MK_LB cexpr MK_RB

    MK_LB  shift, and go to state 51

    $default  reduce using rule 40 (id_list)


State 30

   38 id_list: id_list MK_COMMA . ID
   39        | id_list MK_COMMA . ID dim_decl

    ID  shift, and go to state 52


State 31

   34 var_decl: ID id_list MK_SEMICOLON .

    $default  reduce using rule 34 (var_decl)


State 32

    8 function_decl: VOID ID MK_LPAREN . param_list MK_RPAREN MK_LBRACE block MK_RBRACE
   11              | VOID ID MK_LPAREN . MK_RPAREN MK_LBRACE block MK_RBRACE

    ID         shift, and go to state 46
    INT        shift, and go to state 3
    FLOAT      shift, and go to state 4
    MK_RPAREN  shift, and go to state 53

    param_list  go to state 54
    param       go to state 49
    type        go to state 50


State 33

   37 id_list: ID .
   40        | ID . dim_decl

    MK_LB  shift, and go to state 27

    $default  reduce using rule 37 (id_list)

    dim_decl  go to state 29


State 34

   32 type_decl: TYPEDEF VOID id_list . MK_SEMICOLON
   38 id_list: id_list . MK_COMMA ID
   39        | id_list . MK_COMMA ID dim_decl

    MK_COMMA      shift, and go to state 30
    MK_SEMICOLON  shift, and go to state 55


State 35

   31 type_decl: TYPEDEF type id_list . MK_SEMICOLON
   38 id_list: id_list . MK_COMMA ID
   39        | id_list . MK_COMMA ID dim_decl

    MK_COMMA      shift, and go to state 30
    MK_SEMICOLON  shift, and go to state 56


State 36

   55 init_id: ID OP_ASSIGN . relop_expr

    ID         shift, and go to state 57
    CONST      shift, and go to state 58
    OP_NOT     shift, and go to state 59
    OP_MINUS   shift, and go to state 60
    MK_LPAREN  shift, and go to state 61

    relop_expr    go to state 62
    relop_term    go to state 63
    relop_factor  go to state 64
    expr          go to state 65
    term          go to state 66
    factor        go to state 67
    var_ref       go to state 68


State 37

    7 function_decl: type ID MK_LPAREN . param_list MK_RPAREN MK_LBRACE block MK_RBRACE
   10              | type ID MK_LPAREN . MK_RPAREN MK_LBRACE block MK_RBRACE

    ID         shift, and go to state 46
    INT        shift, and go to state 3
    FLOAT      shift, and go to state 4
    MK_RPAREN  shift, and go to state 69

    param_list  go to state 70
    param       go to state 49
    type        go to state 50


State 38

   42 dim_decl: dim_decl . MK_LB cexpr MK_RB
   54 init_id: ID dim_decl .

    MK_LB  shift, and go to state 51

    $default  reduce using rule 54 (init_id)


State 39

   52 init_id_list: init_id_list MK_COMMA . init_id

    ID  shift, and go to state 71

    init_id  go to state 72


State 40

   33 var_decl: type init_id_list MK_SEMICOLON .

    $default  reduce using rule 33 (var_decl)


State 41

   49 cfactor: CONST .

    $default  reduce using rule 49 (cfactor)


State 42

   50 cfactor: MK_LPAREN . cexpr MK_RPAREN

    CONST      shift, and go to state 41
    MK_LPAREN  shift, and go to state 42

    cexpr    go to state 73
    mcexpr   go to state 44
    cfactor  go to state 45


State 43

   41 dim_decl: MK_LB cexpr . MK_RB
   43 cexpr: cexpr . OP_PLUS mcexpr
   44      | cexpr . OP_MINUS mcexpr

    OP_PLUS   shift, and go to state 74
    OP_MINUS  shift, and go to state 75
    MK_RB     shift, and go to state 76


State 44

   45 cexpr: mcexpr .
   46 mcexpr: mcexpr . OP_TIMES cfactor
   47       | mcexpr . OP_DIVIDE cfactor

    OP_TIMES   shift, and go to state 77
    OP_DIVIDE  shift, and go to state 78

    $default  reduce using rule 45 (cexpr)


State 45

   48 mcexpr: cfactor .

    $default  reduce using rule 48 (mcexpr)


State 46

   16 param: ID . ID
   18      | ID . ID dim_fn

    ID  shift, and go to state 79


State 47

   12 function_decl: ID ID MK_LPAREN MK_RPAREN . MK_LBRACE block MK_RBRACE

    MK_LBRACE  shift, and go to state 80


State 48

    9 function_decl: ID ID MK_LPAREN param_list . MK_RPAREN MK_LBRACE block MK_RBRACE
   13 param_list: param_list . MK_COMMA param

    MK_RPAREN  shift, and go to state 81
    MK_COMMA   shift, and go to state 82


State 49

   14 param_list: param .

    $default  reduce using rule 14 (param_list)


State 50

   15 param: type . ID
   17      | type . ID dim_fn

    ID  shift, and go to state 83


State 51

   42 dim_decl: dim_decl MK_LB . cexpr MK_RB

    CONST      shift, and go to state 41
    MK_LPAREN  shift, and go to state 42

    cexpr    go to state 84
    mcexpr   go to state 44
    cfactor  go to state 45


State 52

   38 id_list: id_list MK_COMMA ID .
   39        | id_list MK_COMMA ID . dim_decl

    MK_LB  shift, and go to state 27

    $default  reduce using rule 38 (id_list)

    dim_decl  go to state 85


State 53

   11 function_decl: VOID ID MK_LPAREN MK_RPAREN . MK_LBRACE block MK_RBRACE

    MK_LBRACE  shift, and go to state 86


State 54

    8 function_decl: VOID ID MK_LPAREN param_list . MK_RPAREN MK_LBRACE block MK_RBRACE
   13 param_list: param_list . MK_COMMA param

    MK_RPAREN  shift, and go to state 87
    MK_COMMA   shift, and go to state 82


State 55

   32 type_decl: TYPEDEF VOID id_list MK_SEMICOLON .

    $default  reduce using rule 32 (type_decl)


State 56

   31 type_decl: TYPEDEF type id_list MK_SEMICOLON .

    $default  reduce using rule 31 (type_decl)


State 57

  105 factor: ID . MK_LPAREN relop_expr_list MK_RPAREN
  111 var_ref: ID .
  112        | ID . dim_list

    MK_LB      shift, and go to state 88
    MK_LPAREN  shift, and go to state 89

    $default  reduce using rule 111 (var_ref)

    dim_list  go to state 90


State 58

  102 factor: CONST .

    $default  reduce using rule 102 (factor)


State 59

  101 factor: OP_NOT . MK_LPAREN relop_expr MK_RPAREN
  104       | OP_NOT . CONST
  107       | OP_NOT . ID MK_LPAREN relop_expr_list MK_RPAREN
  110       | OP_NOT . var_ref

    ID         shift, and go to state 91
    CONST      shift, and go to state 92
    MK_LPAREN  shift, and go to state 93

    var_ref  go to state 94


State 60

  100 factor: OP_MINUS . MK_LPAREN relop_expr MK_RPAREN
  103       | OP_MINUS . CONST
  106       | OP_MINUS . ID MK_LPAREN relop_expr_list MK_RPAREN
  109       | OP_MINUS . var_ref

    ID         shift, and go to state 95
    CONST      shift, and go to state 96
    MK_LPAREN  shift, and go to state 97

    var_ref  go to state 98


State 61

   99 factor: MK_LPAREN . relop_expr MK_RPAREN

    ID         shift, and go to state 57
    CONST      shift, and go to state 58
    OP_NOT     shift, and go to state 59
    OP_MINUS   shift, and go to state 60
    MK_LPAREN  shift, and go to state 61

    relop_expr    go to state 99
    relop_term    go to state 63
    relop_factor  go to state 64
    expr          go to state 65
    term          go to state 66
    factor        go to state 67
    var_ref       go to state 68


State 62

   55 init_id: ID OP_ASSIGN relop_expr .
   76 relop_expr: relop_expr . OP_OR relop_term

    OP_OR  shift, and go to state 100

    $default  reduce using rule 55 (init_id)


State 63

   75 relop_expr: relop_term .
   78 relop_term: relop_term . OP_AND relop_factor

    OP_AND  shift, and go to state 101

    $default  reduce using rule 75 (relop_expr)


State 64

   77 relop_term: relop_factor .

    $default  reduce using rule 77 (relop_term)


State 65

   79 relop_factor: expr .
   80             | expr . rel_op expr
   91 expr: expr . add_op term

    OP_EQ     shift, and go to state 102
    OP_NE     shift, and go to state 103
    OP_GT     shift, and go to state 104
    OP_LT     shift, and go to state 105
    OP_GE     shift, and go to state 106
    OP_LE     shift, and go to state 107
    OP_PLUS   shift, and go to state 108
    OP_MINUS  shift, and go to state 109

    $default  reduce using rule 79 (relop_factor)

    rel_op  go to state 110
    add_op  go to state 111


State 66

   92 expr: term .
   95 term: term . mul_op factor

    OP_TIMES   shift, and go to state 112
    OP_DIVIDE  shift, and go to state 113

    $default  reduce using rule 92 (expr)

    mul_op  go to state 114


State 67

   96 term: factor .

    $default  reduce using rule 96 (term)


State 68

  108 factor: var_ref .

    $default  reduce using rule 108 (factor)


State 69

   10 function_decl: type ID MK_LPAREN MK_RPAREN . MK_LBRACE block MK_RBRACE

    MK_LBRACE  shift, and go to state 115


State 70

    7 function_decl: type ID MK_LPAREN param_list . MK_RPAREN MK_LBRACE block MK_RBRACE
   13 param_list: param_list . MK_COMMA param

    MK_RPAREN  shift, and go to state 116
    MK_COMMA   shift, and go to state 82


State 71

   53 init_id: ID .
   54        | ID . dim_decl
   55        | ID . OP_ASSIGN relop_expr

    OP_ASSIGN  shift, and go to state 36
    MK_LB      shift, and go to state 27

    $default  reduce using rule 53 (init_id)

    dim_decl  go to state 38


State 72

   52 init_id_list: init_id_list MK_COMMA init_id .

    $default  reduce using rule 52 (init_id_list)


State 73

   43 cexpr: cexpr . OP_PLUS mcexpr
   44      | cexpr . OP_MINUS mcexpr
   50 cfactor: MK_LPAREN cexpr . MK_RPAREN

    OP_PLUS    shift, and go to state 74
    OP_MINUS   shift, and go to state 75
    MK_RPAREN  shift, and go to state 117


State 74

   43 cexpr: cexpr OP_PLUS . mcexpr

    CONST      shift, and go to state 41
    MK_LPAREN  shift, and go to state 42

    mcexpr   go to state 118
    cfactor  go to state 45


State 75

   44 cexpr: cexpr OP_MINUS . mcexpr

    CONST      shift, and go to state 41
    MK_LPAREN  shift, and go to state 42

    mcexpr   go to state 119
    cfactor  go to state 45


State 76

   41 dim_decl: MK_LB cexpr MK_RB .

    $default  reduce using rule 41 (dim_decl)


State 77

   46 mcexpr: mcexpr OP_TIMES . cfactor

    CONST      shift, and go to state 41
    MK_LPAREN  shift, and go to state 42

    cfactor  go to state 120


State 78

   47 mcexpr: mcexpr OP_DIVIDE . cfactor

    CONST      shift, and go to state 41
    MK_LPAREN  shift, and go to state 42

    cfactor  go to state 121


State 79

   16 param: ID ID .
   18      | ID ID . dim_fn

    MK_LB  shift, and go to state 122

    $default  reduce using rule 16 (param)

    dim_fn  go to state 123


State 80

   12 function_decl: ID ID MK_LPAREN MK_RPAREN MK_LBRACE . block MK_RBRACE

    ID            shift, and go to state 124
    INT           shift, and go to state 3
    FLOAT         shift, and go to state 4
    IF            shift, and go to state 125
    WHILE         shift, and go to state 126
    FOR           shift, and go to state 127
    TYPEDEF       shift, and go to state 5
    MK_LBRACE     shift, and go to state 128
    MK_SEMICOLON  shift, and go to state 129
    RETURN        shift, and go to state 130

    $default  reduce using rule 26 (block)

    block      go to state 131
    decl_list  go to state 132
    decl       go to state 11
    type_decl  go to state 12
    var_decl   go to state 13
    type       go to state 133
    stmt_list  go to state 134
    stmt       go to state 135
    var_ref    go to state 136


State 81

    9 function_decl: ID ID MK_LPAREN param_list MK_RPAREN . MK_LBRACE block MK_RBRACE

    MK_LBRACE  shift, and go to state 137


State 82

   13 param_list: param_list MK_COMMA . param

    ID     shift, and go to state 46
    INT    shift, and go to state 3
    FLOAT  shift, and go to state 4

    param  go to state 138
    type   go to state 50


State 83

   15 param: type ID .
   17      | type ID . dim_fn

    MK_LB  shift, and go to state 122

    $default  reduce using rule 15 (param)

    dim_fn  go to state 139


State 84

   42 dim_decl: dim_decl MK_LB cexpr . MK_RB
   43 cexpr: cexpr . OP_PLUS mcexpr
   44      | cexpr . OP_MINUS mcexpr

    OP_PLUS   shift, and go to state 74
    OP_MINUS  shift, and go to state 75
    MK_RB     shift, and go to state 140


State 85

   39 id_list: id_list MK_COMMA ID dim_decl .
   42 dim_decl: dim_decl . MK_LB cexpr MK_RB

    MK_LB  shift, and go to state 51

    $default  reduce using rule 39 (id_list)


State 86

   11 function_decl: VOID ID MK_LPAREN MK_RPAREN MK_LBRACE . block MK_RBRACE

    ID            shift, and go to state 124
    INT           shift, and go to state 3
    FLOAT         shift, and go to state 4
    IF            shift, and go to state 125
    WHILE         shift, and go to state 126
    FOR           shift, and go to state 127
    TYPEDEF       shift, and go to state 5
    MK_LBRACE     shift, and go to state 128
    MK_SEMICOLON  shift, and go to state 129
    RETURN        shift, and go to state 130

    $default  reduce using rule 26 (block)

    block      go to state 141
    decl_list  go to state 132
    decl       go to state 11
    type_decl  go to state 12
    var_decl   go to state 13
    type       go to state 133
    stmt_list  go to state 134
    stmt       go to state 135
    var_ref    go to state 136


State 87

    8 function_decl: VOID ID MK_LPAREN param_list MK_RPAREN . MK_LBRACE block MK_RBRACE

    MK_LBRACE  shift, and go to state 142


State 88

  114 dim_list: MK_LB . expr MK_RB

    ID         shift, and go to state 57
    CONST      shift, and go to state 58
    OP_NOT     shift, and go to state 59
    OP_MINUS   shift, and go to state 60
    MK_LPAREN  shift, and go to state 61

    expr     go to state 143
    term     go to state 66
    factor   go to state 67
    var_ref  go to state 68


State 89

  105 factor: ID MK_LPAREN . relop_expr_list MK_RPAREN

    ID         shift, and go to state 57
    CONST      shift, and go to state 58
    OP_NOT     shift, and go to state 59
    OP_MINUS   shift, and go to state 60
    MK_LPAREN  shift, and go to state 61

    $default  reduce using rule 88 (relop_expr_list)

    relop_expr                go to state 144
    relop_term                go to state 63
    relop_factor              go to state 64
    relop_expr_list           go to state 145
    nonempty_relop_expr_list  go to state 146
    expr                      go to state 65
    term                      go to state 66
    factor                    go to state 67
    var_ref                   go to state 68


State 90

  112 var_ref: ID dim_list .
  113 dim_list: dim_list . MK_LB expr MK_RB

    MK_LB  shift, and go to state 147

    $default  reduce using rule 112 (var_ref)


State 91

  107 factor: OP_NOT ID . MK_LPAREN relop_expr_list MK_RPAREN
  111 var_ref: ID .
  112        | ID . dim_list

    MK_LB      shift, and go to state 88
    MK_LPAREN  shift, and go to state 148

    $default  reduce using rule 111 (var_ref)

    dim_list  go to state 90


State 92

  104 factor: OP_NOT CONST .

    $default  reduce using rule 104 (factor)


State 93

  101 factor: OP_NOT MK_LPAREN . relop_expr MK_RPAREN

    ID         shift, and go to state 57
    CONST      shift, and go to state 58
    OP_NOT     shift, and go to state 59
    OP_MINUS   shift, and go to state 60
    MK_LPAREN  shift, and go to state 61

    relop_expr    go to state 149
    relop_term    go to state 63
    relop_factor  go to state 64
    expr          go to state 65
    term          go to state 66
    factor        go to state 67
    var_ref       go to state 68


State 94

  110 factor: OP_NOT var_ref .

    $default  reduce using rule 110 (factor)


State 95

  106 factor: OP_MINUS ID . MK_LPAREN relop_expr_list MK_RPAREN
  111 var_ref: ID .
  112        | ID . dim_list

    MK_LB      shift, and go to state 88
    MK_LPAREN  shift, and go to state 150

    $default  reduce using rule 111 (var_ref)

    dim_list  go to state 90


State 96

  103 factor: OP_MINUS CONST .

    $default  reduce using rule 103 (factor)


State 97

  100 factor: OP_MINUS MK_LPAREN . relop_expr MK_RPAREN

    ID         shift, and go to state 57
    CONST      shift, and go to state 58
    OP_NOT     shift, and go to state 59
    OP_MINUS   shift, and go to state 60
    MK_LPAREN  shift, and go to state 61

    relop_expr    go to state 151
    relop_term    go to state 63
    relop_factor  go to state 64
    expr          go to state 65
    term          go to state 66
    factor        go to state 67
    var_ref       go to state 68


State 98

  109 factor: OP_MINUS var_ref .

    $default  reduce using rule 109 (factor)


State 99

   76 relop_expr: relop_expr . OP_OR relop_term
   99 factor: MK_LPAREN relop_expr . MK_RPAREN

    OP_OR      shift, and go to state 100
    MK_RPAREN  shift, and go to state 152


State 100

   76 relop_expr: relop_expr OP_OR . relop_term

    ID         shift, and go to state 57
    CONST      shift, and go to state 58
    OP_NOT     shift, and go to state 59
    OP_MINUS   shift, and go to state 60
    MK_LPAREN  shift, and go to state 61

    relop_term    go to state 153
    relop_factor  go to state 64
    expr          go to state 65
    term          go to state 66
    factor        go to state 67
    var_ref       go to state 68


State 101

   78 relop_term: relop_term OP_AND . relop_factor

    ID         shift, and go to state 57
    CONST      shift, and go to state 58
    OP_NOT     shift, and go to state 59
    OP_MINUS   shift, and go to state 60
    MK_LPAREN  shift, and go to state 61

    relop_factor  go to state 154
    expr          go to state 65
    term          go to state 66
    factor        go to state 67
    var_ref       go to state 68


State 102

   81 rel_op: OP_EQ .

    $default  reduce using rule 81 (rel_op)

